--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -17,8 +17,8 @@ jobs:
             uses: aws-actions/configure-aws-credentials@v2
             with:
                 aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-                aws-seceret-access-key: ${{ secrets.AWS_SECRET_ACESS_KEY }}
-                region: "us-east-1"
+                aws-secret-access-key: ${{ secrets.AWS_SECRET_ACESS_KEY }}
+                region: us-east-1
           - name: install terraform
             uses: hashicorp/setup-terraform@v3        #for installing the terraform 
 
