--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -29,4 +29,4 @@ jobs:
             run: terraform plan
             
           - name: terraform apply
-            run: terraform apply  
+            run: terraform apply -auto-approve 
